// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders 1`] = `
<div
  className="sc-jrsJWt kCbNjd"
  id="documents-container"
>
  <div
    className="infinite-scroll-component__outerdiv"
    style={Object {}}
  >
    <div
      className="infinite-scroll-component sc-iqAclL ipZwWN"
      style={
        Object {
          "WebkitOverflowScrolling": "touch",
          "height": "auto",
          "overflow": "auto",
        }
      }
    >
      <div
        className="sc-fujyAs jiccqL sc-crzoAE fgkuwk"
      >
        <div
          className="sc-gtsrHT csBdns"
        >
          <p>
            text
          </p>
        </div>
        <div
          className="sc-pNWdM fLFNuC"
        >
          <div
            aria-label="Edit"
            className="sc-bdnxRM isnqEX"
            onClick={[Function]}
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              strokeWidth="0"
              style={
                Object {
                  "color": undefined,
                }
              }
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34c-.39-.39-1.02-.39-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders with documents not loaded yet 1`] = `
<div
  className="sc-kEqXSa jgiJjN"
>
  <span
    className="css-0"
  >
    <span
      className="css-b0t2tw"
    />
    <span
      className="css-fz02ge"
    />
    <span
      className="css-1xlchjq"
    />
  </span>
</div>
`;

exports[`renders with no documents 1`] = `
<div
  className="sc-jrsJWt kCbNjd"
  id="documents-container"
>
  <div
    className="infinite-scroll-component__outerdiv"
    style={Object {}}
  >
    <div
      className="infinite-scroll-component sc-iqAclL ipZwWN"
      style={
        Object {
          "WebkitOverflowScrolling": "touch",
          "height": "auto",
          "overflow": "auto",
        }
      }
    />
  </div>
</div>
`;
